--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500;700;800&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -18,21 +19,49 @@ body {
           justify-content: center;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Roboto Slab", serif;
 }
 
-.game {
-  padding: 100px;
-  min-width: 500px;
-  min-height: 500px;
+.game__info {
+  width: 600px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin-bottom: 20px;
+  font-size: 2rem;
+}
+
+.active {
+  color: #2a2929;
+  border-bottom: 3px solid #454343;
+  font-weight: 800;
+}
+
+.board {
+  padding: 10px;
+  min-width: 600px;
+  min-height: 600px;
   border: 10px solid black;
-  display: -ms-grid;
-  display: grid;
+  display: -ms-inline-grid;
+  display: inline-grid;
   -ms-grid-columns: (1fr)[3];
       grid-template-columns: repeat(3, 1fr);
+  font-size: 3rem;
 }
 
-.game__field {
-  border: 2px blue solid;
+.board__field {
+  height: 200px;
+  border: #2f2f2f solid;
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -42,41 +71,50 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding: 0;
+  border-radius: 10px;
+  font-size: 4rem;
+  cursor: pointer;
 }
 
-.game .field-1 {
-  border-width: 0 2px 2px 0;
+.board__field:hover {
+  -webkit-box-shadow: 0 0 20px 5px black;
+          box-shadow: 0 0 20px 5px black;
 }
 
-.game .field-2 {
-  border-width: 0 2px 2px 2px;
+.board .field-1 {
+  border-width: 0 5px 5px 0;
 }
 
-.game .field-3 {
-  border-width: 0 0 2px 2px;
+.board .field-2 {
+  border-width: 0 5px 5px 5px;
 }
 
-.game .field-4 {
-  border-width: 2px 2px 2px 0;
+.board .field-3 {
+  border-width: 0 0 5px 5px;
 }
 
-.game .field-5 {
-  border-width: 2px 2px 2px 2px;
+.board .field-4 {
+  border-width: 5px 5px 5px 0;
 }
 
-.game .field-6 {
-  border-width: 2px 0 2px 2px;
+.board .field-5 {
+  border-width: 5px 5px 5px 5px;
 }
 
-.game .field-7 {
-  border-width: 2px 2px 0 0;
+.board .field-6 {
+  border-width: 5px 0 5px 5px;
 }
 
-.game .field-8 {
-  border-width: 2px 2px 0 2px;
+.board .field-7 {
+  border-width: 5px 5px 0 0;
 }
 
-.game .field-9 {
-  border-width: 2px 0 0 2px;
+.board .field-8 {
+  border-width: 5px 5px 0 5px;
+}
+
+.board .field-9 {
+  border-width: 5px 0 0 5px;
 }
 /*# sourceMappingURL=style.css.map */
