--- a/style.scss
+++ b/style.scss
@@ -3,53 +3,80 @@
   margin: 0;
   box-sizing: border-box;
 }
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500;700;800&display=swap");
 body {
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   box-sizing: border-box;
+  flex-direction: column;
+  font-family: "Roboto Slab", serif;
+}
+.game__info {
+  width: 600px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-bottom: 20px;
+  font-size: 2rem;
+}
+.active {
+  color: rgb(42, 41, 41);
+  border-bottom: 3px solid rgb(69, 67, 67);
+  font-weight: 800;
 }
 
-.game {
-  padding: 100px;
-  min-width: 500px;
-  min-height: 500px;
+.board {
+  padding: 10px;
+  min-width: 600px;
+  min-height: 600px;
   border: 10px solid black;
-  display: grid;
+  display: inline-grid;
   grid-template-columns: repeat(3, 1fr);
+  font-size: 3rem;
 
   &__field {
-    border: 2px blue solid;
+    height: 200px;
+    border: rgb(47, 47, 47) solid;
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 0;
+    border-radius: 10px;
+    font-size: 4rem;
+    cursor: pointer;
+    &:hover {
+      box-shadow: 0 0 20px 5px black;
+    }
   }
   .field-1 {
-    border-width: 0 2px 2px 0;
+    border-width: 0 5px 5px 0;
   }
+
   .field-2 {
-    border-width: 0 2px 2px 2px;
+    border-width: 0 5px 5px 5px;
   }
   .field-3 {
-    border-width: 0 0 2px 2px;
+    border-width: 0 0 5px 5px;
   }
   .field-4 {
-    border-width: 2px 2px 2px 0;
+    border-width: 5px 5px 5px 0;
   }
   .field-5 {
-    border-width: 2px 2px 2px 2px;
+    border-width: 5px 5px 5px 5px;
   }
   .field-6 {
-    border-width: 2px 0 2px 2px;
+    border-width: 5px 0 5px 5px;
   }
   .field-7 {
-    border-width: 2px 2px 0 0;
+    border-width: 5px 5px 0 0;
   }
   .field-8 {
-    border-width: 2px 2px 0 2px;
+    border-width: 5px 5px 0 5px;
   }
   .field-9 {
-    border-width: 2px 0 0 2px;
+    border-width: 5px 0 0 5px;
   }
 }
