--- a/style.scss
+++ b/style.scss
@@ -47,9 +47,9 @@ body {
     border-radius: 10px;
     font-size: 4rem;
     cursor: pointer;
-    &:hover {
-      box-shadow: 0 0 20px 5px black;
-    }
+  }
+  .hover-effect:hover {
+    box-shadow: 0 0 20px 5px black;
   }
   .field-1 {
     border-width: 0 5px 5px 0;
