--- a/style.css
+++ b/style.css
@@ -2,47 +2,31 @@
 * {
   padding: 0;
   margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
   height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  flex-direction: column;
   font-family: "Roboto Slab", serif;
 }
 
-.game__info {
+.game-info {
   width: 300px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  align-items: center;
+  justify-content: space-around;
   margin-bottom: 20px;
   font-size: 2rem;
 }
 
 .active {
-  color: #2a2929;
-  border-bottom: 3px solid #454343;
+  color: rgb(42, 41, 41);
+  border-bottom: 3px solid rgb(69, 67, 67);
   font-weight: 800;
 }
 
@@ -50,71 +34,70 @@ body {
   padding: 10px;
   min-width: 300px;
   min-height: 300px;
-  border: 10px solid black;
-  display: -ms-inline-grid;
+  border: 5px solid black;
   display: inline-grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   font-size: 3rem;
 }
-
 .board__field {
   height: 100px;
-  border: #2f2f2f solid;
+  border: rgb(47, 47, 47) solid;
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   padding: 0;
-  border-radius: 10px;
   font-size: 4rem;
   cursor: pointer;
 }
-
 .board .hover-effect:hover {
-  -webkit-box-shadow: 0 0 20px 5px black;
-          box-shadow: 0 0 20px 5px black;
+  box-shadow: 0 0 20px 5px black;
 }
-
 .board .field-1 {
   border-width: 0 5px 5px 0;
 }
-
 .board .field-2 {
   border-width: 0 5px 5px 5px;
 }
-
 .board .field-3 {
   border-width: 0 0 5px 5px;
 }
-
 .board .field-4 {
   border-width: 5px 5px 5px 0;
 }
-
 .board .field-5 {
   border-width: 5px 5px 5px 5px;
 }
-
 .board .field-6 {
   border-width: 5px 0 5px 5px;
 }
-
 .board .field-7 {
   border-width: 5px 5px 0 0;
 }
-
 .board .field-8 {
   border-width: 5px 5px 0 5px;
 }
-
 .board .field-9 {
   border-width: 5px 0 0 5px;
 }
-/*# sourceMappingURL=style.css.map */
+
+.reset {
+  margin-top: 20px;
+  padding: 10px 20px;
+  border: 2px solid black;
+  border-radius: 1rem;
+  font-size: 15px;
+}
+.reset:hover {
+  transition: all 0.3s ease-in-out;
+  transform: translateY(-5px);
+  box-shadow: 0 5px 10px -5px black;
+}
+
+.winner-info {
+  font-size: 30px;
+  margin-top: 20px;
+}
+.winner-info .winner {
+  text-decoration: underline;
+}/*# sourceMappingURL=style.css.map */
