--- a/style.scss
+++ b/style.scss
@@ -13,7 +13,8 @@ body {
   flex-direction: column;
   font-family: "Roboto Slab", serif;
 }
-.game__info {
+
+.game-info {
   width: 300px;
   display: flex;
   align-items: center;
@@ -31,7 +32,7 @@ body {
   padding: 10px;
   min-width: 300px;
   min-height: 300px;
-  border: 10px solid black;
+  border: 5px solid black;
   display: inline-grid;
   grid-template-columns: repeat(3, 1fr);
   font-size: 3rem;
@@ -44,7 +45,6 @@ body {
     align-items: center;
     justify-content: center;
     padding: 0;
-    border-radius: 10px;
     font-size: 4rem;
     cursor: pointer;
   }
@@ -78,5 +78,24 @@ body {
   }
   .field-9 {
     border-width: 5px 0 0 5px;
+  }
+}
+.reset {
+  margin-top: 20px;
+  padding: 10px 20px;
+  border: 2px solid black;
+  border-radius: 1rem;
+  font-size: 15px;
+  &:hover {
+    transition: all 0.3s ease-in-out;
+    transform: translateY(-5px);
+    box-shadow: 0 5px 10px -5px black;
+  }
+}
+.winner-info {
+  font-size: 30px;
+  margin-top: 20px;
+  .winner {
+    text-decoration: underline;
   }
 }
